--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -107,6 +107,8 @@ dataSource:
 environments:
     development:
         dataSource:
+            logSql: true
+            formatSql: true
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
